# opengl-hw2

./: .gitignore  .gitmodules
art/: armchair.blend  ash-tray.blend  projector.blend  scene.blend  table-export.blend  table.blend  whisky-glass.blend
data/shaders/: depth.fs  depth.vs  opaque.fs  opaque.vs  project.fs  project.vs  projtex.fs  projtex.vs  textured.fs  textured.vs
src/: CMakeLists.txt  app.cpp  app.h  types.cpp  types.h
